fix(gtk): add sidebar separation for nautilus visibility

--- a/.config/matugen/templates/gtk-colors.css
+++ b/.config/matugen/templates/gtk-colors.css
@@ -31,13 +31,13 @@
 @define-color view_fg_color {{colors.on_surface.default.hex}};
 
 /* Sidebar colors */
-@define-color sidebar_bg_color {{colors.surface_dim.default.hex}};
+@define-color sidebar_bg_color {{colors.surface_container_low.default.hex}};
 @define-color sidebar_fg_color {{colors.on_surface.default.hex}};
 @define-color sidebar_backdrop_color {{colors.background.default.hex}};
 @define-color sidebar_shade_color {{colors.background.default.hex}};
 
 /* Headerbar colors */
-@define-color headerbar_bg_color {{colors.surface_dim.default.hex}};
+@define-color headerbar_bg_color {{colors.surface_container_low.default.hex}};
 @define-color headerbar_fg_color {{colors.on_surface.default.hex}};
 @define-color headerbar_backdrop_color {{colors.background.default.hex}};
 @define-color headerbar_shade_color {{colors.background.default.hex}};
